@@ -1259,6 +1259,229 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testTokenEndingWithWordComponentOfMinimumLength
+specifier|public
+name|void
+name|testTokenEndingWithWordComponentOfMinimumLength
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+index|[]
+name|dict
+init|=
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"ef"
+block|}
+decl_stmt|;
+name|DictionaryCompoundWordTokenFilter
+name|tf
+init|=
+operator|new
+name|DictionaryCompoundWordTokenFilter
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"abcdef"
+argument_list|)
+argument_list|)
+argument_list|,
+name|dict
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_SUBWORD_SIZE
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MAX_SUBWORD_SIZE
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertTokenStreamContents
+argument_list|(
+name|tf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"abcdef"
+block|,
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"ef"
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|0
+block|,
+literal|2
+block|,
+literal|4
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|6
+block|,
+literal|2
+block|,
+literal|4
+block|,
+literal|6
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|0
+block|,
+literal|0
+block|,
+literal|0
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testWordComponentWithLessThanMinimumLength
+specifier|public
+name|void
+name|testWordComponentWithLessThanMinimumLength
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+index|[]
+name|dict
+init|=
+block|{
+literal|"abc"
+block|,
+literal|"d"
+block|,
+literal|"efg"
+block|}
+decl_stmt|;
+name|DictionaryCompoundWordTokenFilter
+name|tf
+init|=
+operator|new
+name|DictionaryCompoundWordTokenFilter
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"abcdefg"
+argument_list|)
+argument_list|)
+argument_list|,
+name|dict
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_SUBWORD_SIZE
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MAX_SUBWORD_SIZE
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+comment|// since "d" is shorter than the minimum subword size, it should not be added to the token stream
+name|assertTokenStreamContents
+argument_list|(
+name|tf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"abcdefg"
+block|,
+literal|"abc"
+block|,
+literal|"efg"
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|0
+block|,
+literal|4
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|7
+block|,
+literal|3
+block|,
+literal|7
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|0
+block|,
+literal|0
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testReset
 specifier|public
 name|void
